# portal-back

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
doc/: Media.postman_collection.json
scripts/: cp_files  cp_files.bash  delete_files  delete_files.bash  dump  dump.bash  index  index.bash
src/: main.rs
src/app/: mod.rs
src/app/controllers/: mod.rs
src/app/middlewares/: mod.rs
src/app/queries/: auth.rs  book.rs  category.rs  film.rs  main_page.rs  mod.rs  movie.rs  music.rs
src/app/repositories/: auth.rs  book.rs  category.rs  film.rs  mod.rs  movie.rs  music.rs
src/app/schemas/: mod.rs  translate.rs
src/app/schemas/req/: category.rs  film.rs  mod.rs  movie.rs  music.rs
src/app/schemas/res/: auth.rs  book.rs  category.rs  film.rs  main_page.rs  mod.rs  movie.rs  music.rs
src/app/services/: auth.rs  book.rs  category.rs  dump.rs  film.rs  mod.rs  movie.rs  music.rs
src/config/: mod.rs  sample.toml  state.rs
src/database/: create.sql  init.sql  insert.sql
src/utils/: mod.rs
