[package]
name = "media"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
config = "0.14.1"
sqlx = { version = "0.8", features = [ "runtime-async-std", "postgres" ] }
log = "0.4.22"
fern = "0.7.0"
chrono = "0.4.38"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
